Get rid of H2 and JOOQ and use in-memory data structures
